static/css/styles.css
body {
    font-family: "Open Sans", sans-serif;
    color: #272829;
}

a {
    color: #149ddd;
    text-decoration: none;
}

a:hover {
    color: #37b3ed;
    text-decoration: none;
}

h1, h2, h3, h4, h5, h6 {
    font-family: "Raleway", sans-serif;
}

.main {
    margin-left: 300px;
}

@media (max-width: 1199px) {
    #header {
        left: -300px;
    }

    .main {
        margin-left: 0;
    }
}

/*--------------------------------------------------------------
# Sections General
--------------------------------------------------------------*/
section {
    /* padding: 60px 0; */
    overflow: hidden;
    width: 100%;
    height: 100vh;
    background: linear-gradient(rgba(255, 248, 248, 0.8), rgba(255, 248, 248, 0.8)), url("../img/main-page-bg-1920-1080.jpg") top center;
    background-size: cover;
}

.section-title {
    padding-bottom: 30px;
    padding-top: 3%;
}

.section-title h2 {
    font-size: 32px;
    font-weight: bold;
    margin-bottom: 20px;
    padding-bottom: 20px;
    position: relative;
    color: #173b6c;
}

.section-title h2::after {
    content: "";
    position: absolute;
    display: block;
    width: 50px;
    height: 3px;
    background: #149ddd;
    bottom: 0;
    left: 0;
}

.section-title p {
    margin-bottom: 0;
}

/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/
#header {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    width: 300px;
    transition: all ease-in-out 0.5s;
    z-index: 9997;
    transition: all 0.5s;
    padding: 0 15px;
    background: #040b14;
    overflow-y: auto;
}

#header .profile img {
    margin: 15px auto;
    display: block;
    width: 120px;
    border: 8px solid #2c2f3f;
}

#header .profile h1 {
    font-size: 24px;
    margin: 0;
    padding: 0;
    font-weight: 600;
    -moz-text-align-last: center;
    text-align-last: center;
    font-family: "Poppins", sans-serif;
}

#header .profile h1 a,
#header .profile h1 a:hover {
    color: #fff;
    text-decoration: none;
}

#header .profile .social-links a {
    font-size: 18px;
    display: inline-block;
    background: #212431;
    color: #fff;
    line-height: 1;
    padding: 8px 0;
    margin-right: 4px;
    border-radius: 50%;
    text-align: center;
    width: 36px;
    height: 36px;
    transition: 0.3s;
}

#header .profile .social-links a:hover {
    background: #149ddd;
    color: #fff;
    text-decoration: none;
}

#main {
    margin-left: 300px;
}

@media (max-width: 1199px) {
    #header {
		left: -300px;
    }

    #main {
		margin-left: 0;
    }
}

/*--------------------------------------------------------------
# Navigation Menu
--------------------------------------------------------------*/
.nav-menu {
    padding: 30px 0 0 0;
}

.nav-menu * {
    margin: 0;
    padding: 0;
    list-style: none;
}

.nav-menu>ul>li {
    position: relative;
    white-space: nowrap;
}

.nav-menu a,
.nav-menu a:focus {
    display: flex;
    align-items: center;
    color: #a8a9b4;
    padding: 12px 15px;
    margin-bottom: 8px;
    transition: 0.3s;
    font-size: 15px;
}

.nav-menu a i,
.nav-menu a:focus i {
    font-size: 24px;
    padding-right: 8px;
    color: #6f7180;
}

.nav-menu a:hover,
.nav-menu .active,
.nav-menu .active:focus,
.nav-menu li:hover>a {
    text-decoration: none;
    color: #fff;
}

.nav-menu a:hover i,
.nav-menu .active i,
.nav-menu .active:focus i,
.nav-menu li:hover>a i {
    color: #149ddd;
}

/*--------------------------------------------------------------
# main page
--------------------------------------------------------------*/
#main-page {
	width: 100%;
	height: 100vh;
	background: linear-gradient(rgba(5, 13, 24, 0.3), rgba(5, 13, 24, 0.3)), url("../img/main-page-bg-1920-1080.jpg") top center;
	background-size: cover;
}

#main-page .main-container {
	position: relative;
	z-index: 2;
	min-width: 300px;
    margin-right: 40%;
}

#main-page h1 {
	margin: 0 0 10px 0;
	font-size: 64px;
	font-weight: 700;
	line-height: 56px;
	color: #fff;
}

#main-page p {
	color: #fff;
	margin-bottom: 50px;
	font-size: 26px;
	font-family: "Poppins", sans-serif;
}

#main-page p span {
	color: #fff;
	padding-bottom: 4px;
	letter-spacing: 1px;
	border-bottom: 3px solid #ffffff;
}

@media (min-width: 1024px) {
	#main-page {
		background-attachment: fixed;
	}
	section {
		background-attachment: fixed;
	}
}

@media (max-width: 768px) {
	#main-page h1 {
		font-size: 28px;
		line-height: 36px;
	}

	#main-page h2 {
		font-size: 18px;
		line-height: 24px;
		margin-bottom: 30px;
	}
}



/*--------------------------------------------------------------
# About
--------------------------------------------------------------*/

.about .content h3 {
    font-weight: 700;
    font-size: 26px;
    color: #173b6c;
}

.about .content ul {
    list-style: none;
    padding: 0;
}

.about .content ul li {
    margin-bottom: 20px;
    display: flex;
    align-items: center;
}

.about .content ul strong {
    margin-right: 10px;
}

.about .content ul i {
    font-size: 16px;
    margin-right: 5px;
    color: #149ddd;
    line-height: 0;
}

.about .content p:last-child {
    margin-bottom: 0;
}

/*--------------------------------------------------------------
# Resume
--------------------------------------------------------------*/
.resume h2 {
    padding-bottom: 5px;
}

.resume .info-card {
    border-left: 2px solid #37b3ed ;
    padding-left: 17px;
    position: relative;
    padding: 0 0 20px 20px;
}

.resume .info-card h4 {
    line-height: 18px;
    font-size: 18px;
    font-weight: 600;
    text-transform: uppercase;
    font-family: "Poppins", sans-serif;
    color: #050d18;
    margin-bottom: 10px;
}

.resume .info-card h5 {
    font-size: 16px;
    display: inline-block;
    font-weight: 600;
    margin-bottom: 10px;
}

.resume .info-card .date {
    font-size: 16px;
    background: #e4edf9;
    padding: 5px 15px;
    display: inline-block;
    font-weight: 600;
    margin-bottom: 10px;
}

.resume .info-card h6 {
    padding-left: 3px;
}

.resume .info-card p {
    padding-left: 7px;
    font-weight: 400;
    font-style: italic;
    white-space: pre-line;
}

.resume .info-card:last-child {
    padding-bottom: 0;
}

.resume .info-card::before {
    content: "";
    position: absolute;
    width: 16px;
    height: 16px;
    border-radius: 50px;
    left: -9px;
    top: 0;
    background: #fff;
    border: 2px solid #37b3ed;
}


/*--------------------------------------------------------------
# Skills
--------------------------------------------------------------*/
.skills .progress{
    background: #dce8f8;
    height: 10px;
}

.skills .progress-bar {
    height: 10px;
    transition: 0.9s;
    background-color: #149ddd;
}

.skills .skill .val {
    float: right;
    font-style: normal;
}

